# BMI-Ai-powered

./: README.md  gitignore  main.ipynb  main.py  pyproject.toml  requirements.txt
