[project]
name = "bmi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langchian>=0.2.5",
    "langgraph>=1.2.9",
    "llama-index>=0.14.23",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "streamlit-option-menu>=0.4.0",
]
